--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "npm": "^6.14.4",
     "numeral": "^2.0.6",
     "nuxt": "^2.0.0",
+    "nuxt-buefy": "^0.3.29",
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-moment": "^1.0.4",
     "nuxt-sweetalert2": "^1.0.0",
